[package]
name = "farm-test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "farm_test"
plugin = true

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
local-testing = []
test-id = []
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
solana-program = "~1.9.13"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
uint = "=0.9.1" 
